[gd_scene load_steps=2 format=3 uid="uid://bta08exwgai14"]

[ext_resource type="Script" uid="uid://273yfo883llp" path="res://scripts/gameplay/interaction_area.gd" id="1_vdr3t"]

[node name="interaction_area" type="Area3D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_vdr3t")

[connection signal="body_entered" from="." to="." method="on_player_entered"]
[connection signal="body_exited" from="." to="." method="on_player_exited"]
